# AcuIfero4Vigia

./: .env.example  .gitignore  AGENTS.md  DEMO_RECORDING_PERSONA_C.md  HACKATHON.md  Hackathon-agent-brief.md  LICENSE  MAIN_IDEA.md  README.md  TODO.acuifero-litert.md  docker-compose.yml  plan.md  scaffold.py
backend/: Dockerfile  README.md  pyproject.toml
backend/src/acuifero_vigia/: main.py
backend/src/acuifero_vigia/adapters/: asr.py  image_assessment.py  litert_node.py  llm.py  text_structuring_gemma_fewshot.py  video_assessment.py
backend/src/acuifero_vigia/api/: __init__.py  deps.py  serializers.py
backend/src/acuifero_vigia/core/: settings.py
backend/src/acuifero_vigia/db/: database.py
backend/src/acuifero_vigia/fusion/: __init__.py  engine.py
backend/src/acuifero_vigia/models/: domain.py
backend/src/acuifero_vigia/schemas/: api.py  tools.py
backend/src/acuifero_vigia/scripts/: seed.py
backend/src/acuifero_vigia/services/: action_guard.py  actuators.py  acuifero_assessment.py  calibration.py  cap.py  decision_engine.py  deterministic_firewall.py  external_data.py  historical_context.py  node_analysis.py  predictive.py  reasoning.py  report_structuring.py  storage.py
backend/tests/: test_actuators.py  test_acuifero_assessment.py  test_acuifero_provider.py  test_api.py  test_asr.py  test_cap_emit.py  test_decision_engine.py  test_deterministic_firewall.py  test_fusion_engine.py  test_historical_context.py  test_image_assessment.py  test_litert_benchmark.py  test_litert_node.py  test_persona_a_jury_terminal.py  test_predictive.py  test_reasoning.py  test_report_structuring.py  test_rioplatense.py  test_sinagir_export.py  test_tools_guard.py  test_vigia_image.py
(+321 files in other folders)
